test/tests/stages/6_statements_and_conditional_expressions/valid/if_null_body.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  if
  (
  const int(0)
  )
  ;
  else
  identifier(x)
  =
  const int(1)
  ;
  return
  identifier(x)
  ;
  }
