test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/empty_if_body.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(0)
  )
  else
  return
  const int(0)
  ;
  }
